# second-brain-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATING.md  README.md  connect_neurons.py  inbox.md  index.md  install.sh  pyproject.toml  second-brain  second_brain.py  setup.sh
.foam/templates/: new-note.md
.github/workflows/: ci.yml
examples/second-brain/: README.md  index.md  second-brain.yml
examples/second-brain/knowledge/: example-note.md  index.md
examples/second-brain/log/: 2026-W25.md
examples/second-brain/projects/: index.md
examples/second-brain/projects/example-project/: completed-items.md  log.md  processes.md  project.md
examples/second-brain/projects/example-project/processes/: deploy.md
log/: 2026-W25.md  index.md
projects/example-project/: index.md  log.md  processes.md  project.md
projects/example-project/processes/: index.md  local-development.md
tests/: test_connect_neurons.py  test_install.sh  test_second_brain.py  test_setup.sh
workflow/: copilot-instructions.md  index.md  project-agents-template.md  project-template.md  working-style.md
